<resources>
    <string name="app_name">Encore</string>
    <string name="welcome_back">Welcome back</string>
    <string name="please_sign_in_to_your_account">Please sign in to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_uppercase">REMEMBER</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or_sign_in_with_caps">OR SIGN IN WITH</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_new_account">Create new account</string>
    <string name="please_fill_in_the_form_to_continue">Please fill in the form to continue</string>
    <string name="name">Name</string>
    <string name="or_continue_with_uppercase">OR CONTINUE WITH</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in_title_case">Sign In</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up_title_case">Sign Up</string>
    <string name="sign_up">Sign up</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_text">Enter your email address and we\'ll send you a link to reset your password</string>
    <string name="recover">Recover</string>
    <string name="get_started">Get started</string>
    <string name="app_name_lowercase">encore</string>
    <string name="let_yourself_feel_it">Let yourself feel it</string>
    <string name="title">Title</string>
    <string name="media">Media</string>
    <string name="subtitle">Subtitle</string>
    <string name="label_home">Home</string>
    <string name="label_search">Search</string>
    <string name="label_library">Library</string>
    <string name="coming_soon">Coming soon</string>
    <string name="artists">Artists</string>
    <string name="playlists">Playlists</string>
    <string name="songs">Songs</string>
    <string name="invalid_view_type">Invalid view type</string>
    <string name="what_will_you_listen_to">What will you listen to?</string>
    <string name="browse_all_title_case">Browse All</string>
    <string name="save_playlist">Save playlist</string>
    <string name="more">More</string>
    <string name="shuffle">Shuffle</string>
    <string name="play">Play</string>
    <string name="artist">Artist</string>
    <string name="follow_artist">Follow artist</string>
    <string name="popular_songs_title_case">Popular Songs</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="restart">Restart</string>
    <string name="timer_zero">0:00</string>
    <string name="onboarding">Onboarding</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="retry">Retry</string>
    <string name="add_playlist">Add playlist</string>
    <string name="equalizer">Equalizer</string>
    <string name="playlist_name">Playlist name</string>
    <string name="give_your_playlist_a_catchy_description">Give your playlist a catchy description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="no_recent_activity">No recent activity</string>
    <string name="icon">Icon</string>
    <string name="play_now">Play now</string>
    <string name="play_next">Play next</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="add_to_another_playlist">Add to another playlist</string>
    <string name="more_from_">More from %1$s</string>
    <string name="start_building_your_playlist_by_adding_some_songs">Start building your playlist by adding some songs</string>
    <string name="edit_playlist">Edit playlist</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_delete_this_playlist">Are you sure you want to delete this playlist?</string>
    <string name="you_are_not_following_any_artists">You are not following any artists</string>
    <string name="you_don_t_have_any_playlists">You don\'t have any playlists</string>
    <string name="no_playlists_found">No playlists found</string>
    <string name="create_playlist">Create playlist</string>
    <string name="no_results_for_">No results for %1$s</string>
    <string name="dialog_message_permission_notification">Enable notifications to receive updates on new songs, playlists, and special offers. Stay in sync with your favorite tunes, even when you\'re not in the app!</string>
    <string name="dialog_title_notification_permission">Stay Tuned with Music Alerts!</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="notification_permission_denied">Notification permission denied</string>
    <string name="browse_all">Browse All</string>
    <string name="unable_to_open_equalizer">Unable to open equalizer</string>
    <string name="unable_to_open_url">Unable to open URL</string>
    <string name="open_in_spotify">Open in Spotify</string>

    <!-- Screen titles -->
    <string name="title_home_screen">Go listen!</string>
    <string name="title_search_screen">Let\'s search</string>
    <string name="title_library_screen">Your library</string>
    <string name="title_profile_screen">Profile</string>
    <string name="title_player_screen">Now playing</string>

    <!-- Screen labels -->
    <string name="label_onboarding_screen">Onboarding</string>
    <string name="label_sign_in_screen">Sign In</string>
    <string name="label_sign_up_screen">Sign Up</string>
    <string name="label_reset_password_screen">Reset Password</string>
    <string name="label_home_screen">Home</string>
    <string name="label_search_screen">Search</string>
    <string name="label_library_screen">Library</string>
    <string name="label_playlist_screen">Playlist</string>
    <string name="label_artist_screen">Artist</string>
    <string name="label_player_screen">Player</string>
    <string name="label_profile_screen">Profile</string>
    <string name="label_category_screen">Category</string>
    <string name="label_search_items_screen">Search Items</string>

    <!-- Success -->
    <string name="success_send_password_reset_email">We sent an email to %1$s with a link to get back into your account.</string>

    <!-- Errors -->
    <string name="error_unexpected">An unexpected error occurred.</string>
    <string name="error_unknown">Something wrong happened. Please try again.</string>
    <string name="error_connect">A network error (such as timeout, interrupted connection or unreachable host) has occurred.</string>

    <!-- Ktor errors -->
    <string name="error_ktor_bad_request">Check your credentials and try again!</string>
    <string name="error_ktor_unauthorized">Authorization Failed! Try Logging In again.</string>
    <string name="error_ktor_server_error">Server Disruption! We are on fixing it.</string>
    <string name="error_ktor_gateway_timeout">Too much load at this time, try again later!</string>

    <!-- Authentication errors -->
    <string name="auth_network_exception">An unknown network error has occurred.</string>
    <string name="auth_unknown_exception">An unknown error has occurred.</string>
    <string name="auth_error_custom_token">The custom token format is incorrect. Please check the documentation.</string>
    <string name="auth_error_custom_token_mismatch">The custom token corresponds to a different audience.</string>
    <string name="auth_error_credential_malformed_or_expired">The supplied auth credential is malformed or has expired.</string>
    <string name="auth_error_invalid_email">The email address is badly formatted.</string>
    <string name="auth_error_wrong_password">The password is invalid or the user does not have a password.</string>
    <string name="auth_error_user_mismatch">The supplied credentials do not correspond to the previously signed in user.</string>
    <string name="auth_error_requires_recent_login">This operation is sensitive and requires recent authentication. Log in again before retrying this request.</string>
    <string name="auth_error_accounts_exits_with_different_credential">An account already exists with the same email address but different sign-in credentials. Sign in using a provider associated with this email address.</string>
    <string name="auth_error_email_already_in_use">The email address is already in use by another account.</string>
    <string name="auth_error_credential_already_in_use">This credential is already associated with a different user account.</string>
    <string name="auth_error_user_disabled">The user account has been disabled by an administrator.</string>
    <string name="auth_error_user_not_found">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="auth_error_operation_not_allowed">This operation is not allowed. You must enable this service in the console.</string>
    <string name="auth_error_password_is_weak">The given password is invalid.</string>
    <string name="auth_error_user_token_expired">The user\'s credential is no longer valid. The user must sign in again</string>
    <string name="auth_error_invalid_user_token">The user\'s credential is no longer valid. The user must sign in again.</string>
    <string name="auth_error_too_many_requests">Too many requests, please try again later.</string>

    <!-- Google authentication errors -->
    <string name="error_auth_google_unexpected_credential">Unexpected type of credential.</string>
    <string name="error_auth_google_invalid_id_token">Received an invalid Google id token response.</string>
    <string name="error_auth_google_cancelled">Sign in with Google cancelled.</string>
    <string name="error_auth_google_credential_exception">Received an invalid credential response.</string>

    <!-- Validation errors -->
    <string name="error_blank_email">Please enter your email address.</string>
    <string name="error_blank_name">Please enter your name.</string>
    <string name="error_blank_password">Your password must have at least 6 letters and numbers.</string>
    <string name="error_blank_value">This field is required.</string>
    <string name="error_invalid_email">Please enter a valid email.</string>
    <string name="error_invalid_password">Use a mix of letters and numbers that you can remember.</string>
    <string name="error_invalid_repeated_password">You must enter the same password twice in order to confirm it.</string>
</resources>