<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/online_playlist"
        android:visible="false">
        <item
            android:id="@+id/save_playlist"
            android:contentDescription="@string/save_playlist"
            android:icon="@drawable/baseline_favorite_border_24"
            android:title="@string/save_playlist"
            app:showAsAction="ifRoom" />
    </group>

    <group
        android:id="@+id/local_playlist"
        android:visible="false">
        <item
            android:id="@+id/edit_playlist"
            android:contentDescription="@string/edit_playlist"
            android:title="@string/edit"
            app:showAsAction="never" />

        <item
            android:id="@+id/delete_playlist"
            android:contentDescription="@string/delete_playlist"
            android:title="@string/delete"
            app:showAsAction="never" />
    </group>
</menu>