<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/onboarding"
        android:foreground="@drawable/bg_onboarding"
        android:scaleType="centerCrop" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/margin_large"
        android:paddingVertical="@dimen/margin_extra_large">

        <com.google.android.material.textview.MaterialTextView
            style="?attr/textAppearanceDisplaySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_lowercase"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/get_started_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/get_started_text"
            style="?attr/textAppearanceBodyLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:text="@string/let_yourself_feel_it"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/get_started_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/get_started_button"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginBottom="16dp"
            android:text="@string/get_started"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:shapeAppearance="?attr/shapeAppearanceCornerLarge" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>

